--- a/src/register.html
+++ b/src/register.html
@@ -3,13 +3,15 @@
 
 <head>
 	<title>Ejemplo básico</title>
-	<meta charset="UTF-8">
-    <link rel="stylesheet" href="/admin.b78c4aa4.css">
+	<meta charset="UTF-8" />
+    <link rel="stylesheet" href="/src/register.css">
 </head>
 
 <body>
 
     <form action="" class="admi">
+
+        <h2>Registro</h2>
 
         <label for="">Nombre:</label>
         <input type="text" placeholder="nombre" id="nombre">
@@ -29,7 +31,7 @@
 		<button id="btn">pete</button>
     </form>
 
-	<script src="/admin.ef25dfbc.js" defer=""></script>
+	<script  src="./register.js" type="module"></script>
 </body>
 
 </html>
