--- a/src/register.html
+++ b/src/register.html
@@ -30,6 +30,8 @@
 
 		<button id="btn">pete</button>
     </form>
+    
+    <a href="login.html">aqui</a>
 
 	<script  src="./register.js" type="module"></script>
 </body>
