--- a/src/login.html
+++ b/src/login.html
@@ -21,7 +21,7 @@
 
 		<button id="btn">pete</button>
     </form>
-
+   <a href="/src/index.html"></a>
 	<script  src="./login.js" type="module"></script>
 </body>
 </html>
