--- a/src/adm.html
+++ b/src/adm.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
+    <nav>
+        <a href="historial.html">historial</a>
+        <a href="login.html">login</a>
+        <a href="register.html">registrar</a>
+        <a href="index.html"></a>
+        <a href=""></a>
+        <a href=""></a>
+        
+    </nav>
     <h1>solicitudes</h1>
     <div id="solicitudes">
 
     </div>
-    
-    <script  src="./adm.js" type="module"></script>
+
+    <script src="./adm.js" type="module"></script>
 </body>
+
 </html>
