--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <nav>
+        <a href="adm.html">administrador</a>
+        <a href="historial.html">historial</a>
+        <a href="login.html">login</a>
+        <a href="register.html">registrar</a>
+        <a href=""></a>
+        <a href=""></a>
+        <a href=""></a>
+        
+    </nav>
     <form action="" class="admi">
 
         <h2>Registro Salida de Computadoras</h2>
@@ -14,7 +25,7 @@
         <label for="">Nombre:</label>
         <input type="text" placeholder="Nombre" id="nombre">
 
-		<label for="">Codigo de PC:</label>
+        <label for="">Codigo de PC:</label>
         <input type="text" placeholder="Codigo PC" id="pc">
 
         <label for="">Fecha de Salida:</label>
@@ -23,10 +34,12 @@
         <label for="">Fecha de Regreso:</label>
         <input type="date" placeholder="" id="fecha_regreso">
 
-		<button id="btn">pete</button>
+        <button id="btn">pete</button>
 
     </form>
-<a href="adm.html">aqui</a>
-	<script  src="./index.js" type="module"></script>
+
+
+    <script src="./index.js" type="module"></script>
 </body>
+
 </html>
