--- a/src/login.html
+++ b/src/login.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
+    <nav>
+        <a href="adm.html">administrador</a>
+        <a href="historial.html">historial</a>
+        <a href="register.html">registrar</a>
+        <a href="index.html">index</a>
+        <a href=""></a>
+        <a href=""></a>
+        
+    </nav>
     <form action="" class="admi">
 
         <h2>Login</h2>
