--- a/src/register.html
+++ b/src/register.html
@@ -8,7 +8,15 @@
 </head>
 
 <body>
-
+    <nav>
+        <a href="adm.html">administrador</a>
+        <a href="historial.html">historial</a>
+        <a href="login.html">login</a>
+        <a href="index.html">index</a>
+        <a href=""></a>
+        <a href=""></a>
+        
+    </nav>
     <form action="" class="admi">
 
         <h2>Registro</h2>
