--- a/src/historial.html
+++ b/src/historial.html
@@ -5,21 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="principal-usuario.css">
+    <link rel="stylesheet" href="./historial.css">
 
 </head>
 
 <body>
-    <div class="cajabuscar">
-        <form method="get" id="buscarform">
-            <fieldset>
-                <input type="text" id="s" value="" placeholder="Buscar" />
-                <input class="button" onclick="busqueda()" type="submit" value="" />
-                <i class="search"></i>
-            </fieldset>
-        </form>
+    <nav>
+        <a href="adm.html">administrador</a>
+        <a href="login.html">login</a>
+        <a href="register.html">registrar</a>
+        <a href="index.html"></a>
+        <a href=""></a>
+        <a href=""></a>
+        
+    </nav>
+    <input type="text" id="buscador" placeholder="Buscar por nombre..." />
+    <div id="historial">
+
+
     </div>
-    <script src="principal-usuario.js"></script>
+    <script src="./historial.js"></script>
 </body>
 
 </html>
