--- a/src/historial.html
+++ b/src/historial.html
@@ -14,7 +14,7 @@
         <a href="adm.html">administrador</a>
         <a href="login.html">login</a>
         <a href="register.html">registrar</a>
-        <a href="index.html"></a>
+        <a href=""></a>
         <a href=""></a>
         <a href=""></a>
         
