--- a/src/register.html
+++ b/src/register.html
@@ -8,36 +8,31 @@
 </head>
 
 <body>
-    <nav>
-        <a href="adm.html">administrador</a>
-        <a href="historial.html">historial</a>
-        <a href="login.html">login</a>
-        <a href="index.html">index</a>
-        <a href=""></a>
-        <a href=""></a>
-        
-    </nav>
-    <form action="" class="admi">
 
-        <h2>Registro</h2>
+    <div class="parent">
 
-        <label for="">Nombre:</label>
-        <input type="text" placeholder="nombre" id="nombre">
+    <div class="img_gato"></div>  
 
-        <label for="">Apellido:</label>
-        <input type="text" placeholder="apellidos" id="apellidos">
+    <div class="di">
+        <br><br>
+        <h2 class="titu" id="es">Registro</h2>
+        <br>
+        <label for="" id="es">Nombre:</label><br>
+        <input type="text" placeholder="Nombre" id="nombre">
+        <br><br>
+        <label for="" id="es">Correo:</label><br>
+        <input type="text" placeholder="Correo" id="correo">
+        <br><br>
+		<label for="">Contraseña:</label><br>
+        <input type="text" placeholder="Contrasena" id="contrasena">
+        <br><br>
+        <label for="">Codigo:</label><br>
+        <input type="text" placeholder="Codigo" id="codigo">
+        <br><br>
+		<button  id="btn">Registrarse</button>
+    </div>
 
-        <label for="">Correo:</label>
-        <input type="text" placeholder="correo" id="correo">
-
-		<label for="">Contraseña:</label>
-        <input type="text" placeholder="contrasena" id="contrasena">
-
-        <label for="">Codigo:</label>
-        <input type="text" placeholder="codigo" id="codigo">
-
-		<button id="btn">pete</button>
-    </form>
+    </div>
     
     <a href="login.html">aqui</a>
 
