--- a/src/historial.html
+++ b/src/historial.html
@@ -11,19 +11,17 @@
 
 <body>
     <nav>
-        <a href="adm.html">administrador</a>
-        <a href="login.html">login</a>
-        <a href="register.html">registrar</a>
-        <a href=""></a>
-        <a href=""></a>
-        <a href=""></a>
         
+
     </nav>
-    <input type="text" id="buscador" placeholder="Buscar por nombre..." />
+    <section>
+        <a href="adm.html" >administrador</a>
+        <input type="text" id="buscador" placeholder="Buscar por nombre..." />
+        <img src="/assets/lupa.png">
+    </section>
     <div id="historial">
-
-
     </div>
+
     <script src="./historial.js"></script>
 </body>
 
