--- a/src/register.html
+++ b/src/register.html
@@ -5,12 +5,15 @@
 	<title>Ejemplo básico</title>
 	<meta charset="UTF-8" />
     <link rel="stylesheet" href="/src/register.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
     <div class="di">
-        <br><br>
+        <br><br><br>
+        <img src="./img/gatocenter-logo.png" alt="">        
+        <br><br> 
         <h2 class="titu" id="es">Registro</h2>
         <br>
         <label for="" id="es">Nombre:</label><br>
