--- a/src/solicitudes.html
+++ b/src/solicitudes.html
@@ -5,24 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./solicitudes.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
     <nav>
-        <p>¡Hola ....!</p>
-        <a href="adm.html">administrador</a>
-        <a href="historial.html">historial</a>
-        <a href="login.html">login</a>
-        <a href="register.html">registrar</a>
-        <button class=""><a href="">salir</a></button>
+        <img class="gato" src="./img/cabeza.gif" alt="">
+        <img class="img_gato" src="./img/gatocenter-logo.png" alt="">
+        <button class="salir"><a href="">salir</a></button>
     </nav>
     <br>
     <br>
     <form action="" class="regi">
-        <br><br>
+        <br><br><br>
         <h2 class="titu">Registro Salida de<br>Computadoras</h2>
-        <br>
+        <br><br>
         <label for="">Nombre:</label><br>
         <input type="text" placeholder="Nombre" id="nombre">
         <br><br>
@@ -40,7 +38,10 @@
     </form>
     <br>
     <br>
-<footer></footer>
+<footer>
+    <p>Hecho por Adrian y Adriana</p>
+    <img class="gatoo" src="./img/login-gif.gif" alt="">
+</footer>
 
     <script src="./solicitudes.js" type="module"></script>
 </body>
