--- a/src/historial.html
+++ b/src/historial.html
@@ -6,21 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./historial.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <nav>
-        
-
-    </nav>
-    <section>
+        <img class="gato" src="./img/cabeza.gif" alt="">
+        <img class="img_gato" src="./img/gatocenter-logo.png" alt="">        
         <a href="adm.html" >administrador</a>
         <input type="text" id="buscador" placeholder="Buscar por nombre..." />
         <img src="/assets/lupa.png">
-    </section>
+        <button class="salir"><a href="">salir</a></button>
+    </nav>
+
     <div id="historial">
     </div>
+
+    <footer>
+        <p class="autor">Hecho por Adrian y Adriana</p>
+        <img class="gatoo" src="./img/login-gif.gif" alt="">
+    </footer>
 
     <script src="./historial.js"></script>
 </body>
