--- a/src/login.html
+++ b/src/login.html
@@ -25,10 +25,11 @@
         <input type="text" placeholder="Codigo" id="codigo">
         <br><br><br>
 		<button id="btn">Entrar</button>
+        <br><br>
+        <a href="./register.html">Registrarse</a>        
     </div>
 
     </div>
-   <a href="/src/solicitudes.html">solicitudes</a>
-	<script  src="./login.js" type="module"></script>
+	<script src="./login.js" type="module"></script>
 </body>
 </html>
