--- a/src/register.html
+++ b/src/register.html
@@ -27,12 +27,14 @@
         <br><br>
         <label for="">Codigo:</label><br>
         <input type="text" placeholder="Codigo" id="codigo">
-        <br><br>
-		<button  id="btn">Registrarse</button>
+        <br><br><br>
+		<button  id="btn">Registrarse</button> 
+        <br><br>       
+        <a href="login.html">Ya tengo cuenta</a> 
     </div>
 
     
-    <a href="login.html">aqui</a>
+
 
 	<script  src="./register.js" type="module"></script>
 </body>
