--- a/src/adm.html
+++ b/src/adm.html
@@ -6,21 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="adm.css">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <nav class="navegador">
 
+    <nav>
+     <img class="gato" src="./img/cabeza.gif" alt="">
+     <img class="img_gato" src="./img/gatocenter-logo.png" alt="">        
      <a href="http://localhost:1234/historial.html">historial</a>
-     
-     <input type="text" id="search" placeholder="Buscar por nombre..." /> 
-
+     <input type="text" id="search" placeholder="Buscar por nombre..." />    
+     <button class="salir"><a href="">salir</a></button>
     </nav>
-    
+    <br> <br>
     <h1>solicitudes</h1>
+    <div id="solicitudes"></div>
 
-    <div id="solicitudes">
-    </div>
+
+    <footer>
+        <p class="autor">Hecho por Adrian y Adriana</p>
+        <img class="gatoo" src="./img/login-gif.gif" alt="">
+    </footer>
 
     <script src="./adm.js" type="module"></script>
 </body>
