--- a/src/login.html
+++ b/src/login.html
@@ -30,6 +30,69 @@
     </div>
 
     </div>
+
+
+
+    <dialog id="primero">
+        <p>Iniciando Seccion</p>
+        <img class="tecleando" src="./img/login-gif.gif" alt=""><br><br>
+        <button autofocus  id="boton_1">Ok</button>
+    </dialog>
+
+    <dialog id="segundo">
+        <p>Contraseña, correo o codigo incorrecto</p>
+        <img class="tecleando" src="./img/login-gif.gif" alt=""><br><br>
+        <button autofocus id="boton_2">Ok</button>
+    </dialog>
+
+    <dialog id="tercero">
+        <p>Usuario no registrado</p>
+        <img class="tecleando" src="./img/login-gif.gif" alt=""><br><br>
+        <button autofocus id="boton_3">Ok</button>
+    </dialog>
+
+    <dialog id="cuarto">
+        <p>Error al obtener administradores. Revisa la consola para más detalles.</p>
+        <img class="tecleando" src="./img/login-gif.gif" alt=""><br><br>
+        <button autofocus id="boton_4">Ok</button>
+    </dialog>
+
+    <dialog id="quinto">
+        <p>Iniciando sesión como un usuario.</p>
+        <img class="tecleando" src="./img/login-gif.gif" alt=""><br><br>
+        <button autofocus id="boton_5">Ok</button>
+    </dialog>
+
+    <dialog id="sexto">
+        <p>Contraseña, correo o codigo incorrecto</p>
+        <img class="tecleando" src="./img/login-gif.gif" alt=""><br><br>
+        <button autofocus id="boton_6">Ok</button>
+    </dialog>
+
+    <dialog id="septimo">
+        <p>Usuario no registrado</p>
+        <img class="tecleando" src="./img/login-gif.gif" alt=""><br><br>
+        <button autofocus id="boton_7">Ok</button>
+    </dialog>
+
+    <dialog id="optavo">
+        <p>Error al obtener usuarios. Revisa la consola para más detalles</p>
+        <img class="tecleando" src="./img/login-gif.gif" alt=""><br><br>
+        <button autofocus id="boton_8">Ok</button>
+    </dialog>
+
+    <dialog id="noveno">
+        <p>Error al obtener usuarios. Revisa la consola para más detalles</p>
+        <img class="tecleando" src="./img/login-gif.gif" alt=""><br><br>
+        <button autofocus id="boton_9">Ok</button>
+    </dialog>
+    
+    <dialog id="decimo">
+        <p>Complete los espacios en blanco"</p>
+        <img class="tecleando" src="./img/login-gif.gif" alt=""><br><br>
+        <button autofocus id="boton_10">Ok</button>
+    </dialog>
+    
 	<script src="./login.js" type="module"></script>
 </body>
 </html>
