--- a/src/register.html
+++ b/src/register.html
@@ -33,7 +33,32 @@
         <a href="login.html">Ya tengo cuenta</a> 
     </div>
 
-    
+
+
+    <dialog id="primero">
+        <p>Registrado como usuario</p>
+        <img class="tecleando" src="./img/login-gif.gif" alt=""><br><br>
+        <button autofocus  id="boton_1">Ok</button>
+    </dialog>
+
+    <dialog id="segundo">
+        <p>Registrado como administrador</p>
+        <img class="tecleando" src="./img/login-gif.gif" alt=""><br><br>
+        <button autofocus id="boton_2">Ok</button>
+    </dialog>
+
+    <dialog id="tercero">
+        <p>No puede registrarse</p>
+        <img class="tecleando" src="./img/login-gif.gif" alt=""><br><br>
+        <button autofocus id="boton_3">Entendido</button>
+    </dialog>
+
+    <dialog id="cuarto">
+        <p>Complete los espacios en balnco</p>
+        <img class="tecleando" src="./img/login-gif.gif" alt=""><br><br>
+        <button autofocus id="boton_4">Entendido</button>
+    </dialog>
+
 
 
 	<script  src="./register.js" type="module"></script>
