le fui poniendo un poquito de amoooooor

--- a/src/register.html
+++ b/src/register.html
@@ -54,7 +54,7 @@
     </dialog>
 
     <dialog id="cuarto">
-        <p>Complete los espacios en balnco</p>
+        <p>Complete los espacios en blanco</p>
         <img class="tecleando" src="./img/login-gif.gif" alt=""><br><br>
         <button autofocus id="boton_4">Entendido</button>
     </dialog>
